...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/caixa_arredondada"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_form"
            android:id="@+id/resultado_busca_propriedades">

            <TextView
                android:id="@+id/text_quantidade_encontrados"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLinha"
                android:layout_marginBottom="10dp" />

            <ListView
                android:id="@+id/listaDietas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="multipleChoice"
                android:listSelector="@color/colorItemListSelected"
                android:longClickable="true" />

...
